syntax = "proto3";
import "tx.proto";
package org.brewchain.account.gens;

enum PBCTModule {
    BCT = 0; // Block
};

enum PBCTCommand {
	GBC = 0; // 生成Block Header
	SBC = 1; // 广播block Header

	SSS = 2; // 获取节点的Block
	BIO = 3; // Block信息
}

message ReqGetBlock {
    int32 txCount = 1;
	string extraData = 2;
}


message RespGetBlock {
	BlockHeaderImpl header = 1;
	int32 retCode = 2;
}

message ReqSyncBlock {
	BlockHeaderImpl header = 1;
}

message RespSyncBlock {
	int32 retCode = 1;
}

message ReqBlockInfo {

}

message RespBlockInfo {
	int32 number = 1;
	int32 blockCount = 2;
	int32 waitSync = 3;
	int32 waitBlock = 4;
	string cache = 5;
}

message BlockHeaderImpl {
	string parentHash = 1;
	string coinbase = 2;
	string txTrieRoot = 3;
	int64 timestamp = 4;
	int32 number = 5;
	int32 reward = 6;
	string extraData = 7;
	string nonce = 8;
	string blockHash = 9;
	repeated string txHashs = 10;
	int64 sliceId = 11;
}
